--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,11 @@
             "Gao\\tool\\": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+        "phpunit/phpunit": "^6.2"
+    },
+    "scripts": {
+        "phpunit": "./vendor/bin/phpunit"
+    }
 }
