--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": ">=7.3"
+        "php": ">=7.1.0",
+        "ext-mbstring": "*"
     },
     "authors": [
         {
